2003-08-22  Mihai Preda <mihai_preda@users.sourceforge.net>

	* include/shlobj.h (IPersistFolder::GetClassID):
	Correct declaration.
	(CMF_*) Add missing defines.

2003-08-22   Danny Smith <dannysmith@users.sourceforge.net>

        * include/winuser.h (DC_BUTTONS): Add define.

2003-08-22  Andrew Greenwood  <lists@silverblade.co.uk>

        * include/winuser.h (DC_GRADIENT): Add define.

2003-08-22  Martin Fuchs  <Martin-Fuchs@gmx.net>

	* include/commctrl.h (BTNS_*): Define BTNS_* as successors to the
	older TBSTYLE_* constants.

2003-08-18  Danny Smith <dannysmith@users.sourceforge.net>

	* include/commctrl.h (TB_*) Group defines together. 

2003-08-18  Martin Fuchs  <Martin-Fuchs@gmx.net>

	* include/winuser.h (ICON_SMALL2): Define.
	* include/commctrl.h (TB_SETBUTTONWIDTH, TB_SETDRAWTEXTFLAGS):
	Define.
	* include/shlobj.h (SHDRAGIMAGE): Define structure.
	(IDragSourceHelper) Define interface.
  	(IDropTargetHelper): Likewise.
	(IExtractIcon): Unicode it.
	(ICommDlgBrowser): Use IShellView type as param in OnDefaultCommand,
	OnStateChange and IncludeObject methods.

2003-08-17  Martin Fuchs  <Martin-Fuchs@gmx.net>

	* include/commctrl.h (TreeView_GetScrollTime,
	TreeView_SetScrollTime): Define macros.
	* include/winuser.h (GetShellWindow): Add prototype.
	* include/objidl.h (STGMEDIUM): Correct lpszFileName type.

2003-08-15  Martin Fuchs  <Martin-Fuchs@gmx.net>

	* include/shguid.h (CLSID_DragDropHelper, IID_IDropTargetHelper,
	IID_IDragSourceHelper): Declare.
	* lib/shell32.c (CLSID_DragDropHelper, IID_IDropTargetHelper,
	IID_IDragSourceHelper): Define.

2003-08-15  Andrew Greenwood  <lists@silverblade.co.uk>

	* include/wingdi.h (DEVMODE[AW]) Correct structure definition.
	* include/ddk/ntapi.h (LPC_TYPE): Add LPC_CONNECTION_REFUSED.
	* include/ddk/winddk.h (IRP_*): Add constants as anonymous enum.

2003-08-10  Danny Smith <dannysmith@users.sourceforge.net>

	* lib/uuid.c (CGID_Explorer, CGID_ShellDocView,
	CGID_ShellServiceObject): Remove definitions.